--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "country-flag-icons": "^1.5.14",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.471.1",
     "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^7.1.2",
     "react-scripts": "5.0.1",
